--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- This isn't a real portfolio, it's just meant to be a project for Free Code Camp it has problems on mobile and codepen visualitzation -->
+<!-- This isn't a real portfolio, it's just meant to be a project for Free Code Camp it has problems on mobile and codepen visualitzation needs serious fixing-->
 <html lang="en">
     <head>
         <!--Standart Meta Tags-->
